# CodexPetDesk

./: .gitignore  ASSET_LICENSE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.widget.config.js
.github/workflows/: build.yml  ci.yml
examples/: widget-demo.html
public/pets/hachiroku/: pet.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/hooks/: codex-pet-hook.cjs
src-tauri/src/: lib.rs  main.rs
src/widget/: codex-pet-widget.js
