[package]
name = "codex-pet-desk"
version = "0.1.0"
description = "A cross-platform desktop companion for Codex pet packages."
authors = ["Codex"]
edition = "2021"

[lib]
name = "codex_pet_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
