[package]
name = "codex-pet-desk"
version = "0.1.0"
description = "A cross-platform desktop companion for Codex pet packages."
authors = ["Codex"]
edition = "2021"

[lib]
name = "codex_pet_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
zip = "2"
